# magiccity

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
citygen/: __init__.py  biomes.py  catalogs.py  classes.py  cli.py  config.py  export.py  fences.py  fields.py  footprints.py  generator.py  geometry.py  mobile_lidar.py  parcels.py  roads.py  roofs.py  sampling.py  selectors.py  trees.py  vehicles.py  worldgen.py
configs/: README.md  demo_building_footprints.yaml  demo_building_roofs.yaml  demo_courtyard_blocks.yaml  demo_curved_roofs.yaml  demo_dense_downtown.yaml  demo_export_geometry_only.yaml  demo_linear.yaml  demo_lowrise_suburb.yaml  demo_mixed_biomes.yaml  demo_mixed_biomes_footprints.yaml  demo_multi_tile.yaml  demo_organic.yaml  demo_oriented_parcels.yaml  demo_parcel_alignment.yaml  demo_parcel_fences.yaml  demo_parcels.yaml  demo_pitched_roofs.yaml  demo_radial.yaml  demo_radial_ring.yaml  demo_road_profiles.yaml  demo_roads_and_sidewalks.yaml  demo_sparse_fast_preview.yaml  demo_terrain_relief.yaml  demo_trees.yaml  demo_universal_showcase.md  demo_universal_showcase.yaml  demo_vehicles.yaml  mvp.yaml
doc/: biomes.md  building_footprints.md  building_roofs.md  configuration_reference.md  fences.md  generated_objects.md  index.md  parcels.md  roads.md  sampling.md  terrain.md  trees.md  universal_showcase.md  vehicles.md  worldgen_catalogs.md
outputs/: demo_building_footprints.metadata.json  demo_building_footprints.ply  demo_building_footprints_test.metadata.json  demo_building_footprints_test.ply  demo_building_roofs.metadata.json  demo_organic.ply  (+20 more)
(+98 files in other folders)
