[project]
name = "magiccity"
version = "0.1.0"
description = "MVP command line generator for synthetic urban point clouds."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.0",
    "tqdm>=4.67.3",
]

[project.scripts]
citygen = "citygen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["citygen"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
]
